# Saramsa

./: .dockerignore  .gitattributes  .gitignore  ADD_MISSING_SECRETS.md  AGENTS.md  DEPLOYMENT_FIX_SUMMARY.md  DEVOPS_AGENT.md  Dockerfile.celery  Dockerfile.celery-base  Dockerfile.celery-gpu  Dockerfile.celery-gpu-base  Launch Essentials.xlsx  PRODUCTION-URLS.md  Procfile  README.md  REPO_GUIDE.md  START-SERVICES.md  azure_architecture_cost.html  check_work_items.py  dump.rdb  fix-azure-settings.sh  load_test.py  pipeline_comparison.docx  pipeline_comparison.html  requirements.txt  saramsa.bat  saramsa.ps1  setup-path.bat  setup-saramsa-command.ps1  test_30_comments.py  test_azure_openai.py  test_full_pipeline_with_save.py  test_work_items_api.py  trigger_analysis.py  trigger_analysis_with_auth.py  trigger_test_analysis.py
celery_ops/: README.md  pyproject.toml
celery_ops/celery_ops/: __init__.py  app.py  cli.py  config.py  control.py  events.py  model.py
celery_ops/celery_ops/api/: __init__.py
celery_ops/celery_ops/ui/react/: package-lock.json  package.json  tailwind.config.js
celery_ops/celery_ops/ui/react/public/: index.html
celery_ops/celery_ops/ui/react/src/: App.tsx  index.tsx
celery_ops/celery_ops/ui/react/src/components/: DurationBadge.tsx  Header.tsx  Sidebar.tsx  StatusBadge.tsx  StatusIndicator.tsx
celery_ops/celery_ops/ui/react/src/types/: index.ts
celery_ops/celery_ops/ui/react/src/views/: RunsView.tsx  TasksView.tsx  WorkersView.tsx
celery_ops/celery_ops/ui/react/src/views/runs/: DetailSidebar.tsx  ExecutionTimeline.tsx  RunDetail.tsx  (+1 more)
(+497 files in other folders)
