[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "celery-ops"
version = "0.1.0"
description = "Ops-only Celery observer and lightweight controller (Flower-like, non-authoritative)"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [{ name = "Saramsa" }]
keywords = ["celery", "ops", "monitoring", "flower", "tasks"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Monitoring",
]
dependencies = [
    "celery>=5.2",
    "fastapi>=0.100",
    "uvicorn[standard]>=0.22",
]

[project.optional-dependencies]
redis = ["redis>=4.5"]

[project.scripts]
celery-ops = "celery_ops.cli:main"

[project.urls]
Repository = "https://github.com/your-org/celery_ops"
Documentation = "https://github.com/your-org/celery_ops#readme"

[tool.setuptools.packages.find]
where = ["."]
include = ["celery_ops*"]

[tool.setuptools.package-data]
celery_ops = ["ui/static/*", "ui/react/build/**/*", "ui/react/build/*"]
